# bedsideClock

./: .gitignore  CMakeLists.txt  README.md  partitions.csv  sdkconfig
Fonts/: brygada_1918_24.c  xanh_mono_108.c
Fonts/Brygada_1918/: OFL.txt
bedside_clock/: arrow_1.c  bedside_clock.ino  brygada_1918_24.c  clock_messages.cpp  clock_ui.cpp  clock_ui.h  lvgl_v8_port.cpp  lvgl_v8_port.h
bedside_clock/data/: messages.txt
libraries/: lv_conf.h
libraries/lvgl/src/font/: lv_font.h  lv_font.mk
main/: CMakeLists.txt  calendar.c  checkmark.c  clock_messages.c  clock_messages.h  clock_ui.c  clock_ui.h  main.c  set_time.c  sono_28.c  xanh_mono_108.c
src/: bedside_clock.ino  clock_messages.h  clock_server.cpp  clock_server.h  clock_ui.cpp  clock_ui.h  gear.c  lvgl_v8_port.cpp
src/data/: messages.txt
